Tue Feb  4 17:18:54 CET 2003 Daniel Veillard <daniel@veillard.com>

	* doc/xsltproc.1 doc/xsltproc.xml: fixing bug #104096, put
	  emphasis on the fact that --docbook should not be used
	  for XML.

Wed Jan 22 16:43:49 CET 2003 Daniel Veillard <daniel@veillard.com>

	* python/libxslt.c: fixed a couple of return error #104150
	  reported by Peter O'Shea 

Fri Jan 17 17:43:43 CET 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: fixed a double free of stylesheet
	  when applied to a standalone stylesheet

Tue Jan 14 16:22:48 CET 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing release 2.0.24
	* libxslt.spec.in: small update
	* doc/*: updated the news, rebuilt the APIs descriptions

Tue Jan 14 14:23:47 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/functions.c: fixed #101502 by applying and cleaning up
	  the associated patch from Daniel Stodden.
	* tests/documents/Makefile.am tests/documents/fragment*: added a
	  specific test.

Mon Jan 13 23:25:59 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c libxslt/transform.c: fixing bug #101602
	  for extension modules init and shutdown callbacks, check that
	  they are now called when needed.
	* python/libxsl.py python/libxslt-python-api.xml python/libxslt.c:
	  started adding the extension module support at the Python level.
	  Still a strange bug to hunt down left.

Sun Jan 12 23:56:18 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/attributes.c libxslt/xsltInternals.h libxslt/imports.c
	  libxslt/xslt.c: fixed bug #101003 on attribute-sets value
	  computation in the presence of imports
	* tests/docs/Makefile.am tests/docs/bug-102.xml
	  tests/general/Makefile.am tests/general/bug-102*: added an
	  example in the regression tests for this case

Fri Jan 10 10:34:23 CET 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: final touch to #102800 fix

Thu Jan  9 18:17:40 CET 2003 Daniel Veillard <daniel@veillard.com>
