@@ -426,7 +426,7 @@ dnl for the spec file
 RELDATE=`date +'%a %b %e %Y'`
 AC_SUBST(RELDATE)
 
-rm -f rm COPYING.LIB COPYING
+rm -f COPYING.LIB COPYING
 ln -s Copyright COPYING
 
 
