@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<out xmlns:func="http://exslt.org/functions" xmlns:my="my://own.uri">17</out>
+<out xmlns:my="my://own.uri">17</out>
