@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
-<out xmlns:func="http://exslt.org/functions"><el>17</el>;
+<out><el>17</el>;
     <at>7</at>;
       24</out>
