@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<out xmlns:func="http://exslt.org/functions">120</out>
+<out>120</out>
