@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<out xmlns:func="http://exslt.org/functions">15</out>
+<out>15</out>
